
\name{NEWS}
\title{NEWS file for the basefun package}

\section{Changes in Version 1.2-1 (2025-01-17)}{
  \itemize{
    \item{Allow to keep unused levels in \code{as.basis.formula}.}
  }
}

\section{Changes in Version 1.2-0 (2024-05-21)}{
  \itemize{
    \item{New \code{cyclic_basis()} for modelling seasonal effects.}
  }
}

\section{Changes in Version 1.1-4 (2023-05-16)}{
  \itemize{
    \item{\code{Bernstein_basis(..., ui = c("increasing", "zerointegral")} came with incorrect constraint matrix.}
  }
}

\section{Changes in Version 1.1-3 (2022-05-25)}{
  \itemize{
    \item{\code{Bernstein_basis(..., ui = "zerointegral")} came with incorrect constraint matrix.}
  }
}

\section{Changes in Version 1.1-2 (2022-01-14)}{
  \itemize{
    \item{Allow coefficients in matrix form.}
  }
}


\section{Changes in Version 1.1-1 (2021-11-12)}{
  \itemize{
    \item{Add convexity and concavity constraints to 
          polynomials in Bernstein form.}
    \item{Add toy example demonstrating constrainted 
          curve estimation to \code{?Bernstein_basis}.}
  }
}

\section{Changes in Version 1.1-0 (2021-03-09)}{
  \itemize{
    \item{More infrastructure for \code{as.basis} to return 
          a \code{Matrix} object for ordered factors.}
  }
}

\section{Changes in Version 1.0-7 (2020-02-13)}{
  \itemize{
    \item{Update citation info.}
  }
}

\section{Changes in Version 1.0-6 (2019-10-05)}{
  \itemize{
    \item{Change name of parameter in \code{intercept\_basis} to 
          \code{(_Intercept_)}; this helps to detect 
          intercepts originating from other calls to \code{model.matrix}.}.
  }
}


\section{Changes in Version 1.0-5 (2019-06-20)}{
  \itemize{
    \item{Make sure \code{bounds[1]} is positive if \code{log_first = TRUE}.}
    \item{Correct behaviour outside support when \code{log_first = TRUE}.}
  }
}


\section{Changes in Version 1.0-4 (2019-02-25)}{
  \itemize{
    \item{\code{model.matrix} has \code{constrasts} attribute where appropriate.}
  }
}
