@@ -1,18 +1,18 @@
 Package: basefun
 Title: Infrastructure for Computing with Basis Functions
-Version: 1.2-1
-Date: 2025-01-17
+Version: 1.2-2
+Date: 2025-01-29
 Authors@R: person("Torsten", "Hothorn", role = c("aut", "cre"),
                   email = "Torsten.Hothorn@R-project.org", comment = c(ORCID = "0000-0001-8301-0471"))  
 Description: Some very simple infrastructure for basis functions.
 Depends: variables (>= 1.1-0), R (>= 3.2.0)
 Imports: stats, polynom, Matrix, orthopolynom, methods
-Suggests: coneproj
+Suggests: quadprog
 URL: http://ctm.R-forge.R-project.org
 License: GPL-2
 NeedsCompilation: yes
-Packaged: 2025-01-17 15:15:39 UTC; hothorn
+Packaged: 2025-01-29 14:55:31 UTC; hothorn
 Author: Torsten Hothorn [aut, cre] (<https://orcid.org/0000-0001-8301-0471>)
 Maintainer: Torsten Hothorn <Torsten.Hothorn@R-project.org>
 Repository: CRAN
-Date/Publication: 2025-01-17 16:10:02 UTC
+Date/Publication: 2025-01-29 16:00:02 UTC
